# ThermalAnalysis

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  temp.tmp
applications/: CMakeLists.txt  tempBuilder.cpp  thermal-damage-trender.cpp
applications/resources/: example-tempBuilder-config.yaml
doc/design/: Makefile  classes.uml
doc/writeups/: .gitignore
doc/writeups/LinearCombinations/: main-gnuplottex-fig1.tex  main.tex
src/ThermalAnalysis/: LinearCombination.hpp  LinearCombinator.hpp
testing/: CMakeLists.txt
testing/CatchTests/: FieldInterpolation.cpp  FileIO.cpp  TempBuilder.cpp  TemporaryWorkspace.cpp  ThermalProfile.cpp  \  meetingNotes  meetingNotesJuly2  meetingNotesJune16  meetingNotesJune22
